--- a/styles/site.css
+++ b/styles/site.css
@@ -7,7 +7,7 @@ body {
 /* Custom container */
 .container-narrow {
     margin: 0 auto;
-    max-width: 700px;
+    max-width: 800px;
 }
 
 .container-narrow > hr {
@@ -31,11 +31,15 @@ body {
 }
 
 /* Supporting marketing content */
-.marketing {
+.consultancy {
     margin: 60px 0;
 }
 
-.marketing p + h4 {
+.javascript-logos {
+    margin: 20px 0;
+}
+
+.consultancy p + h4 {
     margin-top: 28px;
 }
 
@@ -43,6 +47,22 @@ body {
     min-height: 100px;
 }
 
-table td {
-    min-width: 100px;
+.logo-column {
+    min-width: 30px;
+}
+
+.text-column {
+    min-width: 75px;
+}
+
+.address {
+    padding-top: 20px;
+}
+
+.address span {
+    display: block;
+}
+
+.company-name {
+    font-weight: bold;
 }
