Fix 'javascript-logos' section on homepage
All images used in this section now loaded locally, and resized to
maximum size used on-site. Responsive view now is now 2-column. Added
some padding to
images.

--- a/styles/site.css
+++ b/styles/site.css
@@ -36,7 +36,23 @@ body {
 }
 
 .javascript-logos {
-    margin: 20px 0;
+    padding: 25px;
+}
+
+.javascript-logos .row-fluid .span3 {
+    padding: 10px;
+}
+
+@media(max-width:767px) {    
+    .javascript-logos {
+        padding: 15px;
+    }
+
+    .javascript-logos .row-fluid .span3 {
+        padding: 5px;
+        float: left;
+        width: 50%;
+    }
 }
 
 .consultancy p + h4 {
