--- a/styles/site.css
+++ b/styles/site.css
@@ -16,7 +16,6 @@ body {
 
 /* Main marketing message and sign up button */
 .jumbotron {
-    margin: 60px 0;
     text-align: center;
 }
 
@@ -32,7 +31,7 @@ body {
 
 /* Supporting marketing content */
 .consultancy {
-    margin: 40px 0;
+    margin: 20px 0;
 }
 
 .javascript-logos {
@@ -81,4 +80,8 @@ body {
 
 .company-name {
     font-weight: bold;
+}
+
+.footer {
+    font-size: 10px;
 }
