--- a/styles/site.css
+++ b/styles/site.css
@@ -2,6 +2,33 @@ body {
     padding-top: 20px;
     padding-bottom: 40px;
     overflow-y: scroll;
+    
+    font-family: "proxima-nova", arial, sans-serif;
+}
+
+p {
+    line-height: 1.5em;
+}
+
+h1, h2, h3, h4 {
+    font-family: "brandon-grotesque", arial, sans-serif;
+    font-weight: 300;
+}
+
+h1 {
+    font-size: 2.4em;
+}
+
+h2 {
+    font-size: 2.1em;
+}
+
+.jumbotron {
+    text-align: center;
+}
+
+.jumbotron h1 {
+    margin: 40px 0;
 }
 
 /* Custom container */
@@ -12,21 +39,6 @@ body {
 
 .container-narrow > hr {
     margin: 30px 0;
-}
-
-/* Main marketing message and sign up button */
-.jumbotron {
-    text-align: center;
-}
-
-.jumbotron h1 {
-    font-size: 72px;
-    line-height: 1;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
 }
 
 /* Supporting marketing content */
@@ -60,6 +72,7 @@ body {
 
 .logo-box {
     min-height: 100px;
+    margin-bottom: 10px;
 }
 
 .logo-column {
